--- a/account.html
+++ b/account.html
@@ -78,7 +78,7 @@
     </div>
 
     <main class="page">
-        <header class="sticky-navbar" id="navbar">
+        <header id="navbar" class="fixed-top d-flex align-items-center header-scrolled">
             <div class="navbar navbar-expand-lg">
                 <div class="container-fluid d-block">
                     <div class="navbar-brand-outer">
@@ -164,8 +164,6 @@
                         </div>
                         <button type="submit" class="primary-btn account-btn">Save</button>
                     </div>
-
-
                 </div>
             </div>
         </section>
@@ -175,12 +173,10 @@
 
 
 
-     <a href="chat.html"
-        class="float-message" target="_blank">
+    <a href="chat.html" class="float-message" target="_blank">
         <i class="fal fa-comments message"></i>
     </a>
-    <a href="https://wa.me/0100000"
-        class="float-whatsapp" target="_blank">
+    <a href="https://wa.me/0100000" class="float-whatsapp" target="_blank">
         <i class="fa fa-whatsapp whatsapp"></i>
     </a>
 
