--- a/chat.html
+++ b/chat.html
@@ -46,7 +46,7 @@
     </div>
 
     <main class="page">
-        <header class="sticky-navbar" id="navbar">
+        <header id="navbar" class="fixed-top d-flex align-items-center header-scrolled">
             <div class="navbar navbar-expand-lg">
                 <div class="container-fluid d-block">
                     <div class="navbar-brand-outer">
