--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <h5 class="modal-title">Project</h5>
                         <div class="modal-body container-fluid">
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -145,7 +145,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -156,7 +156,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -168,7 +168,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -179,7 +179,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -190,7 +190,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -220,7 +220,7 @@
                         <h5 class="modal-title">City</h5>
                         <div class="modal-body container-fluid">
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -231,7 +231,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -242,7 +242,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -254,7 +254,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -265,7 +265,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -276,7 +276,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-sm-3 col-4">
                                     <div class="category-card">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="project" id="">
@@ -995,6 +995,7 @@
             spaceBetween: 10,
             slidesPerGroup: 1,
             loop: true,
+            speed:1000,
             autoplay: {
                 delay: 2000,
             },
@@ -1003,7 +1004,6 @@
                 nextEl: ".swiper-button-next",
                 prevEl: ".swiper-button-prev",
             },
-
             // Responsive breakpoints
             breakpoints: {
                 // when window width is >= 320px
@@ -1030,6 +1030,7 @@
             spaceBetween: 10,
             slidesPerGroup: 1,
             loop: true,
+            speed:1000,
             autoplay: {
                 delay: 2000,
             },
