--- a/product.html
+++ b/product.html
@@ -96,10 +96,10 @@
             <div class="container-fluid">
                 <div class="slides row w-90">
                     <div class="col-md-9">
-                        <img class="productSlides img-fluid main-img" src="assets/img/more-img-2.jpg"
-                            style="display:none">
-                        <img class="productSlides img-fluid main-img" src="assets/img/product.jpg" style="display:none">
-                        <img class="productSlides img-fluid main-img" src="assets/img/more-img.jpg">
+                        <img class="productSlides img-fluid main-img" src="assets/img/more-img.jpg"
+                            >
+                        <img class="productSlides img-fluid main-img" src="assets/img/search-3.jpg" style="display:none">
+                        <img class="productSlides img-fluid main-img" src="assets/img/more-img.jpg" style="display:none">
                         <img class="productSlides img-fluid main-img" src="assets/img/more-img-2.jpg"
                             style="display:none">
                         <img class="productSlides img-fluid main-img" src="assets/img/product.jpg" style="display:none">
@@ -109,19 +109,19 @@
                     </div>
                     <div class="col-md-3 more-img">
                         <div>
-                            <img class="preview small-img" src="assets/img/more-img-2.jpg" onclick="currentDiv(3)">
+                            <img class="preview small-img" src="assets/img/more-img.jpg" onclick="currentDiv(1)">
                         </div>
                         <div>
-                            <img class="preview small-img" src="assets/img/product.jpg" onclick="currentDiv(1)">
+                            <img class="preview small-img" src="assets/img/search-3.jpg" onclick="currentDiv(2)">
                         </div>
                         <div>
-                            <img class="preview small-img" src="assets/img/more-img.jpg" onclick="currentDiv(2)">
+                            <img class="preview small-img" src="assets/img/more-img.jpg" onclick="currentDiv(3)">
                         </div>
                         <div>
-                            <img class="preview small-img" src="assets/img/more-img-2.jpg" onclick="currentDiv(3)">
+                            <img class="preview small-img" src="assets/img/more-img-2.jpg" onclick="currentDiv(4)">
                         </div>
                         <div>
-                            <img class="preview small-img" src="assets/img/product.jpg" onclick="currentDiv(1)">
+                            <img class="preview small-img" src="assets/img/product.jpg" onclick="currentDiv(5)">
                         </div>
                     </div>
                 </div>
